# pulseaudio

./: .travis.yml  meson.build  meson_options.txt
src/: Makefile.am
src/daemon/: main.c  meson.build
src/modules/: meson.build  module-augment-properties.c  module-filter-apply.c  module-ladspa-sink.c
src/modules/alsa/: meson.build
src/pulsecore/: meson.build
