option('system_user',
        type : 'string', value : 'pulse',
        description : 'User for running the PulseAudio daemon as a system-wide instance (pulse)')
option('system_group',
        type : 'string', value : 'pulse',
        description : 'Group for running the PulseAudio daemon as a system-wide instance (pulse)')
option('access_group',
        type : 'string', value : 'pulse-access',
        description : 'Group which is allowed access to a system-wide PulseAudio daemon (pulse-access)')
option('database',
        type : 'combo', value : 'tdb',
        choices : [ 'gdbm', 'tdb', 'simple' ],
        description : 'Database backend')
option('bluez4',
        type : 'combo',
        choices : [ 'auto', 'true', 'false' ],
        description : 'Bluez4 support')
option('bluez5',
        type : 'combo',
        choices : [ 'auto', 'true', 'false' ],
        description : 'Bluez5 support')
option('bluez5-ofono-headset',
        type : 'boolean', value : true,
        description : 'Optional oFono headset backend support (Bluez 5)')
option('bluez5-native-headset',
        type : 'boolean', value : true,
        description : 'Optional native headset backend support (Bluez 5)')